--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,8 +17,10 @@
     "@mui/material": "^5.16.7",
     "axios": "^1.7.5",
     "chart.js": "^4.4.4",
+    "dayjs": "^1.11.13",
     "dotenv": "^16.4.5",
     "formik": "^2.4.6",
+    "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.8.2",
     "nodemon": "^3.1.4",
@@ -28,6 +30,7 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.1",
     "react-star-ratings": "^2.3.0",
+    "recharts": "^2.13.0",
     "swiper": "^11.1.11",
     "uuid": "^10.0.0",
     "yup": "^1.4.0"
@@ -43,6 +46,6 @@
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.9.0",
-    "vite": "^5.4.8"
+    "vite": "^5.4.9"
   }
 }
